# PA_V2

./: .gitignore  ARCHITECTURE_MIGRATION_COMPLETE.md  ARCHITECTURE_SUMMARY.md  CLEANUP_SUMMARY.md  CURRENT_ARCHITECTURE.md  DEPLOYMENT_COMPLETE.md  INTERNET_MESSAGE_ID_IMPLEMENTATION.md  PROPOSED_ARCHITECTURE.md  README.md  REORGANIZATION_ANALYSIS.md  byu_email_test_graph.py  cleanup_old_files.sh  demo_internet_message_id.py  deploy_enhanced.sh  deploy_hybrid.sh  deploy_internet_message_id.sh  deploy_webhook_only.sh  fix_thread_detection.py  fix_thread_simple.py  gmail_token.json  install_email_monitor.sh  manage_memory.py  pyproject.toml  quickstart.py  run_email_test.sh  run_webhook.py  setup_dependencies.sh  setup_gmail_watch.py  simple_test.py  test_byu_mailbox.sh  test_db_queries.py  test_digest_manual.py  test_final_fix.py  test_intelligent_llm.py  test_internet_message_id.py  test_notification_system.py  test_outlook_provider.py  test_secrets.py  test_telegram_notification.py  test_webhook_digest.py  (+1 more)
.cleanup_backup/: email_integration.py  main.py  setup_email_auth.py  telegram_bot_email.py  test_email_integration.py
Code_Explainer_Helper/: 001_email_processing_logic.py
config/: email_check_state.json  gmail_watch.json
docs/: DEPLOYMENT_READINESS.md  EMAIL_MONITOR_SETUP.md  IMPLEMENTATION_SUMMARY.md  README_EMAIL_AUTH.md  README_EMAIL_INTEGRATION.md  SECOND_LIST_OF_CHANGES.md
email_plugins/: __init__.py  outlook_provider.py
n8n/: n8n_using_postgres  starting_n8n
scripts/: renew_gmail_watch.py  run_email_test.sh  run_notify_pending.sh  whatsapp_bridge.js  (+1 more)
(+119 files in other folders)
